find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(SOURCE_FILES edu_useoul_streamix_faster_java_FasterKV.cc)
set(HEADER_FILES edu_useoul_streamix_faster_java_FasterKV.h)
add_library(fasterkv_jni SHARED ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(fasterkv_jni LINK_TO_JNI)